--- a/index.html
+++ b/index.html
@@ -57,25 +57,25 @@
                 <p class="section-subtitle">Explore our comprehensive range of space-inspired design &amp; culture solutions</p>
                 <div class="services-grid">
                 <div class="service-card">
-                    <img src="https://images.unsplash.com/photo-1681673819004-695da4fa9328?w=600&q=80" alt="Service" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
+                    <img src="https://images.unsplash.com/photo-1557243962-0a093922933f?w=600&q=80" alt="Lunar-Inspired Design" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
                     <h3>Lunar-Inspired Design</h3>
                     <p>Unique design products and art inspired by lunar landscapes and space exploration.</p>
                     <a href="services.html" class="card-link">Learn More</a>
                 </div>
                 <div class="service-card">
-                    <img src="https://images.unsplash.com/photo-1681673819004-695da4fa9328?w=600&q=80" alt="Service" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
+                    <img src="https://images.unsplash.com/photo-1681673819004-695da4fa9328?w=600&q=80" alt="Space Culture Content" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
                     <h3>Space Culture Content</h3>
                     <p>Engaging content exploring the intersection of space science, art, and culture.</p>
                     <a href="services.html" class="card-link">Learn More</a>
                 </div>
                 <div class="service-card">
-                    <img src="https://images.unsplash.com/photo-1681673819004-695da4fa9328?w=600&q=80" alt="Service" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
+                    <img src="https://images.unsplash.com/photo-1761746395517-17db0c59d495?w=600&q=80" alt="Custom Space Art" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
                     <h3>Custom Space Art</h3>
                     <p>Commissioned space-themed artwork and installations for homes and public spaces.</p>
                     <a href="services.html" class="card-link">Learn More</a>
                 </div>
                 <div class="service-card">
-                    <img src="https://images.unsplash.com/photo-1681673819004-695da4fa9328?w=600&q=80" alt="Service" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
+                    <img src="https://images.unsplash.com/photo-1563520240533-66480a3916fe?w=600&q=80" alt="Educational Programs" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
                     <h3>Educational Programs</h3>
                     <p>Space science and culture educational programs for schools and community organizations.</p>
                     <a href="services.html" class="card-link">Learn More</a>
